--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ db.json
 node_modules/
 public/
 .deploy*/
-themes/next/
 .idea/workspace.xml
-
 .idea/vcs.xml
+themes/next/
+!themes/next/_config.yml
