--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: unadlib's Notes
-subtitle: something else
+subtitle: Atwood's Law?
 description: coder or programmer?
 author: unadlib
 language: zh-Hans
