--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "server": "hexo server",
+    "publish": "hexo clean && hexo g -d"
+  },
   "hexo": {
     "version": "3.3.8"
   },
