--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 
 # Site
 title: unadlib's Notes
-subtitle: Atwood's Law?
-description: coder or programmer?
+subtitle: 
+description: 
 author: unadlib
-language: zh-Hans
+language: en
 timezone:
-avatar: /images/avatar.jpg
+avatar: 
 disqus_shortname: unadlib
 
 # URL
@@ -59,13 +59,13 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: attraction
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
