--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "server": "hexo server",
-    "publish": "hexo clean && hexo g -d"
+    "deploy": "hexo clean && hexo g -d"
   },
   "hexo": {
     "version": "3.8.0"
